--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <h1 class="title">A Couple Curls</h1>
-        <p class="tagline">Coming Soon</p>
+    <div class="container"> 
+        <img src="images/logo.png" width="500" alt="Coming Soon" class="title">
+        <p class="tagline">Coming Soon!</p> 
     </div>
 </body>
 </html>
