--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="container"> 
-        <img src="images/logo.png" width="500" alt="Coming Soon" class="title">
+        <img src="images/logo.png" alt="logo" class="title">
         <p class="tagline">Coming Soon!</p> 
     </div>
 </body>
